# CloudClipboard

./: LICENSE  README.md
client/: client.cpp  client.h  clipboard.cpp  clipboard.h  login.ui  main.cpp
client/linux/: client.cpp  client.h  clipboard.cpp  clipboard.h  clipboard.pro  login.cpp  login.h  res.qrc
client/win/: client.cpp  client.h  clipboard.cpp  clipboard.h  main.cpp
server/: CMakeLists.txt  Makefile  clipserver.cc  codec.h
server/muduo/include/muduo/net/protorpc/: rpc.pb.h
